--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -14,3 +14,7 @@ mapper.mappers=com.cloud.dao.common.MyMapper
 mapper.not-empty=false
 mapper.identity=MYSQL
 
+spring.session.store-type=redis
+spring.redis.host=192.168.1.158
+spring.redis.port=6379
+spring.session.redis.namespace=spring:session # Namespace for keys used to store sessions.
