--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,11 @@
             <artifactId>jackson-dataformat-avro</artifactId>
             <version>2.9.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
