--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,3 +18,5 @@ spring.session.store-type=redis
 spring.redis.host=192.168.1.158
 spring.redis.port=6379
 spring.session.redis.namespace=spring:session # Namespace for keys used to store sessions.
+
+spring.activemq.broker-url=tcp://192.168.1.166:61616
